# sqlx-multidb-test

./: docker-compose.yml
pg1-init/: 001_user.sql
pg2-init/: 001_user.sql
sqlx-mltidb/: Cargo.toml
sqlx-mltidb/src/: main.rs
