[package]
name = "sqlx-mltidb"
version = "0.1.0"
authors = ["vraisamis <quick.sorting.arg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.36"
thiserror = "1.0.22"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.4.2"
features = ["runtime-tokio-rustls", "postgres"]
